@@ -273,6 +273,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/pulsemanager.cpp: replace hardcoded modules paths with dynamic ones
       depending on the detected PA version.
     - src/pulsemanager.cpp: add "FIXME" debug logging (and cleanup.)
+    - src/pulsemanager.cpp: backport fix for 526.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
